2001-10-13  Mark Kettenis  <kettenis@gnu.org>

	* thread-db.c: Fix a few formatting mistakes.

2001-10-12  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Properly initialize linked
	list pointer to beginning rather than one beyond beginning.

2001-10-12  Daniel Jacobowitz  <drow@mvista.com>

	* symtab.h (struct block): (ALL_BLOCK_SYMBOLS): New macro.

	* symtab.c (find_pc_sect_symtab): Use ALL_BLOCK_SYMBOLS.
	(make_symbol_completion_list): Likewise.
	(make_symbol_overload_list): Likewise.
	* buildsym.c (finish_block): Likewise.
	* breakpoint.c (get_catch_sals):  Likewise.
	* mdebugread.c (mylookup_symbol): Likewise.
	* objfiles.c (objfile_relocate): Likewise.
	* printcmd.c (print_frame_args): Likewise.
	* stack.c (print_block_frame_locals): Likewise.
	(print_block_frame_labels): Likewise.
	(print_frame_arg_vars): Likewise.
	* symmisc.c (dump_symtab): Likewise.
	* tracepoint.c (add_local_symbols): Likewise.
	(scope_info): Likewise.

2001-10-12  Daniel Jacobowitz  <drow@mvista.com>

	* minsyms.c (msymbol_hash): Use better hash function.
	(msymbol_hash_iw): Likewise.  Terminate loop at '(' properly.

	* objfiles.h: Increase MINIMAL_SYMBOL_HASH_SIZE to match modern
	binaries.

2001-10-12  Daniel Jacobowitz  <drow@mvista.com>

	* printcmd.c (print_frame_args):  Move symbol iteration explicitly
	inside the func != NULL block.

2001-10-12  Fernando Nasser  <fnasser@redhat.com>

	* MAINTAINERS (Misc): Add Ian Roxborough as tcl/, tk/ and itcl/
	maintainer.

2001-10-12  Pierre Muller  <muller@ics.u-strasbg.fr>

	* config/i386/tm-cygwin.h: Include tm-i386.h instead of tm-i386v.h.
	This fixes errors in "long long" handling for 'finish' and 'return'
	commands.

2001-10-12  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Avoid adding a shared
	library if it has already been loaded.
	(safe_symbol_file_add_cleanup): Don't mess with stderr or we won't see
	any error messages.
	(safe_symbol_file_add): Ditto.